# provemaps_beta

./: .dockerignore  .env.example  .env.local  .env.prod  .env.prod.backup  .env.production.example  .env.test  .gitattributes  .gitignore  .pre-commit-config.yaml  .server_pid.txt  AGENTS.md  API_DOCUMENTATION.md  CHANGELOG.md  CHANGELOG_20251025_REDIS.md  CONTRIBUTING.md  CRONOGRAMA_PHASE11.md  DEPLOY.md  DEPLOYMENT.md  DOCKER_QUICKREF.md  INSTALL_UBUNTU.md  INSTRUCTIONS_CREATE_PR.md  MAP_FIXES_SUMMARY.md  MONITORING_LOG_PHASE1.md  PHASE6_READY.txt  PHASE9_ASYNC_OPTICAL_LEVELS.md  PR_STATUS.txt  QUICKSTART_LOCAL.md  README.md  SOLUCAO_ENDPOINTS_PORTAS.md  STATUS_SERVICOS.md  TESTE_NAVEGADOR.md  TUTORIAL_DOCKER.md  VERSION  VUE_PRODUCTION_COMPLETE.md  conftest.py  create_backup.ps1  create_backup_tar.ps1  debug_output.txt  docker-compose.test.yml  (+27 more)
.github/: copilot-instructions.md  pull_request_template.md
backend/: check_cables.py  conftest.py  dtemp_fibers.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  requirements_full.txt  test_fusion_manual.py  test_zabbix_hosts.py
backups/: .gitignore  CHECKLIST_TESTES_v2.1.0.md  INDEX.md  QUICK_START.txt  README_BACKUP_v2.1.0.md
core/: __init__.py  apps.py  celery.py  metrics_celery.py  metrics_custom.py  settings.py  urls.py  views.py  views_health.py
database/: runtime.env
doc/: LINK_VALIDATION_REPORT.md  README.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_COMPLETION_REPORT.md  REORGANIZATION_PLAN.md  temporary_zabbix_optical_plan.md
docker/: assign_templates_to_ceos.py  attach_repair_cable.py  check_devices.py  check_fusions_cabo_50.py  check_fusions_ceo.py  create_segments.py  create_test_fibers.py  debug_broken_segments.py  debug_cable_50.py  debug_ceo_2098_duplicates.py  debug_ceos_cabo_50.py  debug_test_data.py  debug_uptime.py  docker-compose.postgis.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  dockerfile  fix_cable_50_structure.py  fix_ceo_2098_attachments.py  inspect_cable_50.py  test_api_infrastructure.py  test_cache.py  test_ceo_context_api.py  test_ceo_flow.py  test_ceo_payload.json  test_fiber_structure.py  test_final_context_api.py  test_frontend_ceo_flow.py  test_rules.py  test_split_v2.py  test_structure_api.py
docs/: API_FIBER_ROUTES_SPEC.md  CELERY_MONITORING_CHECKLIST.md  CELERY_STATUS_ENDPOINT.md  CONFIGURACAO_PERSISTENTE.md  DATABASE_TEST_ERRORS_ANALYSIS.md  DIAGNOSTIC_REPORT_GOOGLE_MAPS.md  FASE4_SUCCESS_REPORT.md  FASE4_TEST_REPORT.md  FIBER_ROUTE_BUILDER_BUG_FIX.md  FINAL_CONSOLIDATED_REPORT.md  FRONTEND_MODULARIZATION_PHASE2.md  FRONTEND_TESTING_MANUAL_PLAN.md  GOOGLE_MAPS_API_SETUP.md  MARIADB_IMPLEMENTATION_COMPLETE.md  MARIADB_SUCCESS_REPORT.md  OBSERVABILITY_PHASE3.md  PROJECT_STATUS_REPORT.md  PROMETHEUS_ALERTS.md  README.md  REDIS_HIGH_AVAILABILITY.md  TECHNICAL_REVIEW.md  TESTING_QUICK_REFERENCE.md  TESTING_WITH_MARIADB.md  adr_fiber_route_builder.md  cache_busting.md  i18n_and_pr_guidelines.md  operations_checklist.md  prometheus_static_version.md
frontend/: .env.example  .eslintrc.cjs  SPRINT2_SUMMARY.md  SPRINT3_SUMMARY.md  index.html  (+10 more)
(+1299 files in other folders)
